feat: Implement repository pattern for user management
- Created IRepository interface for generic repository operations.
- Developed IUserRepository interface extending IRepository for user-specific operations.
- Implemented Repository class for generic CRUD operations.
- Created UserRepository class for user-specific data access methods.
- Added AuthService for user registration and login functionality with JWT token generation.
- Introduced DashboardService for retrieving dashboard statistics and analytics.
- Implemented TokenService for JWT token creation.
- Added AutoMapper profile for DTO mappings.
- Updated appsettings.json to include JWT settings and database connection string.
- Added AppSettings class for configuration management.
- Included necessary NuGet packages for authentication and mapping.
- Created Address DTOs for address management.
- Added UpdatePasswordDto for user password updates.
- Initialized solution file for project structure.

--- a/UberEatsBackend/appsettings.json
+++ b/UberEatsBackend/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "AppSettings": {
+    "JwtSecret": "super_secure_jwt_secret_key_for_uber_eats_clone_application_must_be_at_least_32_bytes",
+    "JwtIssuer": "UberEatsBackend",
+    "JwtAudience": "UberEatsClients",
+    "ConnectionString": "Host=localhost;Database=UberEatsDb;Username=postgres;Password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
