fix: Update JWT secret and connection string in appsettings.json for production environment

--- a/UberEatsBackend/appsettings.json
+++ b/UberEatsBackend/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "JwtSecret": "super_secure_jwt_secret_key_for_uber_eats_clone_application_must_be_at_least_32_bytes",
+    "JwtSecret": "K3QrRDU0IN/CE5/YMyzOSuE+s3ks2cAE6WiPfntVz0o=",
     "JwtIssuer": "UberEatsBackend",
     "JwtAudience": "UberEatsClients",
-    "ConnectionString": "Host=localhost;Database=UberEatsDb;Username=postgres;Password=postgres"
+    "ConnectionString": "Host=elixium.ckc96tanmwth.us-east-1.rds.amazonaws.com;Database=elixium;Username=postgres;Password=CLHqKzNVSGxjzDvZhJhNbqrcsdTSxq;"
   },
   "Logging": {
     "LogLevel": {
