feat: Add password reset functionality and email services
- Created migration to add PasswordResetToken and PasswordResetTokenExpiry columns to Users table.
- Implemented DummyEmailService for simulating email sending during development.
- Defined IEmailService interface for email operations.
- Developed SESEmailService for sending emails via AWS SES, including password reset and welcome emails.
- Added SendGridEmailService for sending emails using SendGrid API.

--- a/UberEatsBackend/.gitignore
+++ b/UberEatsBackend/.gitignore
@@ -409,3 +409,7 @@ appsettings.Development.json
 .env
 .env.*
 !.env.example
+
+appsettings.Development.json
+appsettings.json
+appsettings.Production.json
