--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,12 +1,14 @@
 name: Docker Image CICD
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
+ 
 env:
-  EKS_CLUSTER_NAME: demo-cluter
+  EKS_CLUSTER_NAME: demo-cluster
   AWS_REGION: us-east-1
 
 jobs:
@@ -20,7 +22,7 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-
+ 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
@@ -64,4 +66,4 @@ jobs:
 
     - name: Deploy to EKS
       run: |
-        kubectl apply -f manifests/elixium-foods-api-deployment.yml
+        kubectl apply -f manifests/elixium-api-deployment.yml
