--- a/manifests/elixium-api-deployment.yml
+++ b/manifests/elixium-api-deployment.yml
@@ -7,7 +7,6 @@ metadata:
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
     service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:542910905096:certificate/5a1349ab-ace9-4b5d-a217-1429d26271eb
-    # Solo habilitará SSL/TLS en el puerto que se llame "https"
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"
 spec:
   selector:
@@ -29,6 +28,7 @@ metadata:
   labels:
     app: ubereats-api
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: ubereats-api
@@ -43,7 +43,7 @@ spec:
     spec:
       containers:
         - name: ubereats-backend
-          image: franvilla/back:__IMAGE_TAG__
+          image: __IMAGE_TAG__
           ports:
             - containerPort: 8080
           env:
